[project]
name = "nonebot_plugin_valorant"
version = "0.0.1"
description = "Valorant bot for qq plaform power by NoneBot2"
authors = [
    {name = "BalconyJH", email = "balconyjh@gmail.com"},
]
dependencies = [
    "nonebot2[fastapi]>=2.0.1",
    "nonebot-plugin-apscheduler>=0.3.0",
    "nb-cli>=1.2.2",
    "nonebot-plugin-send-anything-anywhere>=0.3.0",
    "pymysql>=1.1.0",
    "SQLAlchemy>=1.4.41",
    "sqlalchemy-utils>=0.41.1",
    "nonebot-adapter-onebot>=2.2.4",
    "cryptography>=41.0.3",
    "setuptools>=68.1.0",
    "nonebot-plugin-htmlrender>=0.2.2",
    "aiohttp>=3.8.5",
    "pillow>=10.0.1",
    "asyncmy>=0.2.8",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
]
plugins = ["nonebot_plugin_sentry", "nonebot_plugin_htmlrender"]
plugin_dirs = ["nonebot_plugin_valorant/plugins"]
builtin_plugins = ["echo"]
[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=23.7.0",
    "pre-commit>=3.3.3",
    "flake8>=6.1.0",
    "nonebot-plugin-sentry>=0.4.1",
    "viztracer>=0.16.0",
]

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."